--- a/diseases-infectious-feline-panleukopenia.html
+++ b/diseases-infectious-feline-panleukopenia.html
@@ -695,6 +695,9 @@
                         <li>Постелки</li>
                         <li>Обувки и дрехи</li>
                     </ul>
+                    <div class="img-holder">
+                        <img src="../@img/diseases/infectious/panleukopenia.png">
+                    </div>
 
                     <p>При <strong>бременните котки</strong> вирусът на панлевкопенията може да премине през плацентата
                         и да доведе до аборт или преждевременно раждане.</p>
@@ -740,6 +743,9 @@
                         <li>Бледи венци (поради загуба на кръв или шок)</li>
                         <li>Чернодробна недостатъчност</li>
                     </ul>
+                    <div class="img-holder">
+                        <img src="../@img/diseases/infectious/panleukopenia2.png">
+                    </div>
 
                     <h2>Как се диагностицира панлевкопенията?</h2>
                     <p>Ако Вашата котка проявява симптоми на панлевкопения, Вашият ветеринарен лекар ще извърши
@@ -798,6 +804,9 @@
                         <li><strong>Коластра</strong>: Майчиното мляко осигурява пасивен имунитет на котенцата до
                             едномесечна възраст.</li>
                     </ol>
+                    <div class="img-holder">
+                        <img src="../@img/diseases/infectious/panleukopenia3.png">
+                    </div>
 
                     <h2>Какво да направите, ако подозирате панлевкопения?</h2>
                     <p>Ако забележите симптоми на панлевкопения при Вашата котка, незабавно се свържете с ветеринарен
