FLUTD, Tapeworm, Panleuko, Hydrocephaly, Corona

--- a/src/diseases/parasitic/tapeworms.html
+++ b/src/diseases/parasitic/tapeworms.html
@@ -170,7 +170,7 @@
 
                     <h2>Как се заразяват домашните любимци с цестоди?</h2>
                     <div class="img-holder">
-                        <img src="../img/diseases/parasitic/tapeworm1.png">
+                        <img src="../@img/diseases/parasitic/tapeworm1.png">
                         <p>Анатомия на един цестод</p>
                     </div>
 
@@ -221,9 +221,8 @@
                     </ul>
                     <p><strong>Ако забележите някои от тези признаци, свържете се с Вашия ветеринарен лекар!</strong>
                     </p>
-
                     <div class="img-holder">
-                        <img src="../img/diseases/parasitic/tapeworm2.png">
+                        <img src="../@img/diseases/parasitic/tapeworm2.png">
                         <p>Белезникави сегменти от цестоди около ануса</p>
                     </div>
 
