--- a/src/diseases/genitourinary/flutd.html
+++ b/src/diseases/genitourinary/flutd.html
@@ -26,6 +26,10 @@
                         <li>кристалурия - образуване на кристали в урината;</li>
                         <li>частична или пълна обструкция на уретрата</li>
                     </ol>
+                    <div class="img-holder">
+                        <img src="../@img/diseases/genitourinary/flutd.png">
+                    </div>
+
                     <p>ЗДУП може да бъде причинено от:</p>
                     <ul>
                         <li>стрес</li>
@@ -67,6 +71,9 @@
                         <li>Липса на апетит, отпадналост и повръщане</li>
                         <li>Пълно запушване на уретрата може да доведе до <strong>невъзможност за уриниране</strong>, което изисква спешна ветеринарна помощ</li>
                     </ul>
+                    <div class="img-holder">
+                        <img src="../@img/diseases/genitourinary/flutd2.png">
+                    </div>
                     
                     <h2>Как се диагностицира ЗДУП?</h2>
                     <p>Ако котката Ви показва симптоми на ЗДУП, ветеринарният лекар може да извърши следните диагностични тестове:</p>
