--- a/src/diseases/infectious/feline-coronavirus-infection.html
+++ b/src/diseases/infectious/feline-coronavirus-infection.html
@@ -53,6 +53,9 @@
                         <li>Натрупване на течност в коремната кухина или гръдния кош, което води до подут корем или
                             затруднено дишане</li>
                     </ul>
+                    <div class="img-holder">
+                        <img src="../@img/diseases/infectious/panleukopenia2.png">
+                    </div>
 
                     <h2>Как се диагностицира котешката коронавирусна инфекция?</h2>
                     <p>Вашият ветеринарен лекар може да заподозре FCoV въз основа на симптомите и средата на Вашата
