--- a/growth-cat-breeding.html
+++ b/growth-cat-breeding.html
@@ -718,6 +718,10 @@
                         поведение („<strong>хващане</strong> <strong>зад</strong><strong> врата</strong>“),
                         служи за обездвижване на женската и намаляване на риска тя да се отдръпне по време на
                         чифтосването.</p>
+                    <div class="img-holder">
+                        <img src="../@img/growth/cat-mating.png">
+                        <p>Пенисът на котарака е покрит с малки шипове.</p>
+                    </div>
                     <br>
                     <h2>Как се случва процесът на чифтосване?</h2>
                     <p>Котаракът депозира сперма в репродуктивния тракт на женската по време на акта. Интересен факт за
