Poisoning, anaphylaxis uploaded, fixed errors in Diseases

--- a/src/diseases/blood/dic.html
+++ b/src/diseases/blood/dic.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Дисеминирано вътресъдово съсирване (ДИК синдром) при кучета и котки"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Дисеминирано вътресъдово съсирване (ДИК синдром)</h1>
+                    <h1>Дисеминирано вътресъдово съсирване (ДИК синдром) при кучета и котки</h1>
                     
                     <h2>Какво е Дисеминирано вътресъдово съсирване (ДИК синдром) и какво го причинява?</h2>
                     <p>Дисеминираното вътресъдово съсирване (ДИК) е сериозно и <strong>животозастрашаващо</strong> състояние, при което <strong>кръвосъсирващата система</strong> на организма става <strong>прекалено активна</strong>. Това води до <strong>прекомерно образуване на съсиреци</strong> в кръвния поток, което може да блокира притока на кръв към жизненоважни органи.</p>
