--- a/src/diseases/circulatory/chf.html
+++ b/src/diseases/circulatory/chf.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Застойна сърдечна недостатъчност (ЗСН) при кучета и котки"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,11 +15,10 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Застойна сърдечна недостатъчност (ЗСН)</h1>
-                    
+                    <h1>Застойна сърдечна недостатъчност (ЗСН) при кучета и котки</h1>
                     
                     <h2>Какво е ЗСН и какво го причинява?</h2>
-                    <p>Застойната сърдечна недостатъчност (ЗСН) е състояние, при което сърцето не може да изпомпва кръвта ефективно, което води до натрупване на течност в белите дробове, гръдния кош или коремната кухина. ЗСН не е самостоятелно заболяване, а последствие от други сърдечни проблеми. Най-честите причини за ЗСН са:</p>
+                    <p>Застойната сърдечна недостатъчност (ЗСН) е състояние при кучетата и котките, при което сърцето не може да изпомпва кръвта ефективно, което води до натрупване на течност в белите дробове, гръдния кош или коремната кухина. ЗСН не е самостоятелно заболяване, а последствие от други сърдечни проблеми. Най-честите причини за ЗСН са:</p>
                     <ul>
                     <li><strong>Заболявания на сърдечните клапи</strong> (напр. Миксоматозно заболяване на митралната клапа при кучетата)</li>
                     <li><strong>Заболявания на сърдечния мускул</strong> (напр. Дилатативна кардиомиопатия)</li>
