--- a/src/diseases/circulatory/hypertrophic-cardiomyopathy.html
+++ b/src/diseases/circulatory/hypertrophic-cardiomyopathy.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Хипертрофична кардиомиопатия (ХКМ) при котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Хипертрофична кардиомиопатия (ХКМ)</h1>
+                    <h1>Хипертрофична кардиомиопатия (ХКМ) при котките</h1>
                     
                     <h2>Какво представлява хипертрофичната кардиомиопатия (ХКМ) и какво я причинява?</h2>
                     <p>Хипертрофичната кардиомиопатия (<strong>ХКМ</strong>) е най-честото сърдечно заболяване при котките. То причинява необичайно удебеляване на стената на сърцето, особено на лявата камера. Това затруднява нормалното изпомпване на кръвта, което може да доведе до сериозни усложнения.</p>
