--- a/src/diseases/digestive/diaphragmatic-hernia.html
+++ b/src/diseases/digestive/diaphragmatic-hernia.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Диафрагмална херния при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Диафрагмална херния</h1>
+                    <h1>Диафрагмална херния при кучетата и котките</h1>
                     
                     <h2>Какво е диафрагмална херния и какво я причинява?</h2>
                     <p>Диафрагмалната херния е състояние при кучетата и котките, при което има необичаен <strong>отвор</strong> в <strong>диафрагмата</strong> &ndash; мускулът, който разделя гръдната кухина от коремната кухина. Този отвор позволява на <strong>коремните органи</strong> (като черния дроб, червата или стомаха) <strong>да навлязат в гръдната кухина</strong>, което може да затрудни дишането и работата на сърцето.</p>
