--- a/src/diseases/digestive/dysbiosis.html
+++ b/src/diseases/digestive/dysbiosis.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Дисбиоза (дисбактериоза) при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Дисбиоза (дисбактериоза)</h1>
+                    <h1>Дисбиоза (дисбактериоза) при кучетата и котките</h1>
                     
                     <h2>Какво е дисбиоза и какво я причинява?</h2>
                     <p>Дисбиозата е дисбаланс на бактериите, намиращи се в червата на кучетата и котките. Обикновено червата съдържат както добри, така и лоши бактерии, които помагат на храносмилането. Когато балансът е нарушен, вредните бактерии може да се развият твърде много, което води до здравословни проблеми.</p>
