--- a/src/diseases/digestive/inguinal-hernia.html
+++ b/src/diseases/digestive/inguinal-hernia.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Ингвинална херния при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Ингвинална херния</h1>
+                    <h1>Ингвинална херния при кучетата и котките</h1>
                     
                     <h2>Какво е ингвинална херния?</h2>
                     <p>Ингвиналната херния е състояние, при което част от вътрешните органи или мазнини на животното излизат през отвор в коремните мускули.</p>
