--- a/src/diseases/digestive/persistent-deciduous-teeth.html
+++ b/src/diseases/digestive/persistent-deciduous-teeth.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Задържан млечен зъб при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Задържан млечен зъб</h1>
+                    <h1>Задържан млечен зъб при кучетата и котките</h1>
                     
                     <h2>Какво е задържан млечен зъб и какво го причинява?</h2>
                     <p>Задържан млечен зъб е млечен <strong>зъб, който не е паднал, когато постоянният зъб започне да расте</strong>. Обикновено млечните зъби падат, когато постоянните зъби избиват. В някои случаи обаче млечният зъб остава на място, което може да доведе до проблеми с постоянния зъб.</p>
