--- a/src/diseases/digestive/stomatitis.html
+++ b/src/diseases/digestive/stomatitis.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Стоматит при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
