--- a/src/diseases/digestive/umbilical-hernia.html
+++ b/src/diseases/digestive/umbilical-hernia.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Пъпна херния при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Пъпна херния</h1>
+                    <h1>Пъпна херния при кучетата и котките</h1>
                     
                     <h2>Какво е пъпна херния и какво я причинява?</h2>
                     <p>Пъпната херния е състояние, при което част от вътрешните органи или мазнини на животното излизат през отвор в коремните мускули близо до пъпа. Това се случва, когато пъпният пръстен, който трябва да се затвори след раждането, остава отворен. Най-честата причина е вроден дефект, което означава, че животното се ражда с него. В някои случаи травма или прекомерно налягане върху корема също могат да предизвикат херния.</p>
