--- a/src/diseases/genitourinary/chronic-kidney-disease.html
+++ b/src/diseases/genitourinary/chronic-kidney-disease.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Хронична бъбречна недостатъчност (ХБН) при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Хронична бъбречна недостатъчност (ХБН)</h1>
+                    <h1>Хронична бъбречна недостатъчност (ХБН) при кучетата и котките</h1>
                     
                     <h2>Какво е хронична бъбречна недостатъчност (ХБН) и какво я причинява?</h2>
                     <p>Хроничната бъбречна недостатъчност (ХБН) е прогресиращо състояние при кучетата и котките, при което бъбреците постепенно губят способността си да функционират. Бъбреците &ldquo;<strong>филтрират&ldquo; отпадните продукти</strong> от кръвта, регулират количеството на течностите и минералите в организма. Когато не работят правилно, <strong>в организма се натрупват токсини</strong>, което води до здравословни проблеми.</p>
