--- a/src/diseases/genitourinary/cryptorchidism.html
+++ b/src/diseases/genitourinary/cryptorchidism.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Крипторхизъм при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Крипторхизъм</h1>
+                    <h1>Крипторхизъм при кучетата и котките</h1>
                     <h2>Какво е крипторхизъм и какво го причинява?</h2>
                     <p>Крипторхизмът е състояние, при което едното или двете тестиси <strong>не се спускат в скротума</strong>. Обикновено при мъжките кученца тестисите се развиват в коремната кухина и постепенно се спускат в скротума до осмата седмица, а при котараците &ndash; до 7-мия месец. В някои случаи този процес не протича правилно, което води до задържани тестиси.</p>
                     
