--- a/src/diseases/genitourinary/prostatic-cysts.html
+++ b/src/diseases/genitourinary/prostatic-cysts.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Киста на простатата при кучетата"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Киста на простатата</h1>
+                    <h1>Киста на простатата при кучетата</h1>
                     
                     <h2>Какво е киста на простатата и какво я причинява?</h2>
                     <p>Простатната киста е <strong>изпълнена с течност кухина</strong>, която се образува в или около простатната жлеза при мъжките кучета. Тези кисти могат да бъдат <strong>истински</strong> кисти, които имат собствен епителен слой, или <strong>парапростатни</strong> кисти, които се намират извън простатата, но са свързани с нея.</p>
