--- a/src/diseases/genitourinary/pyometra.html
+++ b/src/diseases/genitourinary/pyometra.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Пиометра при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Пиометра</h1>
+                    <h1>Пиометра при кучетата и котките</h1>
                     
                     <h2>Какво е пиометра и какво я причинява?</h2>
                     <p>Пиометрата е заболяване при <strong>женските кучета и котки</strong>, което предствлява <strong>събиране на гной в матката</strong>. Възниква не главно заради бактериална инфекция, но <strong>заради постоянните хормонални промени</strong>, които се случват при некастрираните животни.</p>
