--- a/src/diseases/infectious/ehrlichiosis.html
+++ b/src/diseases/infectious/ehrlichiosis.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Ерлихиоза при кучетата"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Ерлихиоза</h1>
+                    <h1>Ерлихиоза при кучетата</h1>
 
                     <h2>Какво е ерлихиоза и какво я причинява и разпространява?</h2>
                     <p>Ерлихиозата е заболяване при кучетата (и изключително рядко при котките), което се причинява от
