--- a/src/diseases/infectious/feline-calicivirus-infection.html
+++ b/src/diseases/infectious/feline-calicivirus-infection.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Калицивироза"></include>
+<include what="@@layout/header.html" var:title="Калицивироза при котките"></include>
 <include what="@@layout/menu.html"></include>
 
 <section id="content-section">
@@ -14,7 +14,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Калицивироза</h1>
+                    <h1>Калицивироза при котките</h1>
                     <h2>Какво е котешка калицивироза и какво я причинява?</h2>
                     <p>Калицивирозата е заболяване по котките, което се причинява от вирус &ndash; <strong>Feline
                             Calicivirus</strong> (FCV). За нещастие, той е резистентен към повечето дезинфектанти и се
