--- a/src/diseases/infectious/feline-panleukopenia.html
+++ b/src/diseases/infectious/feline-panleukopenia.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Панлевкопения"></include>
+<include what="@@layout/header.html" var:title="Панлевкопения при котките"></include>
 <include what="@@layout/menu.html"></include>
 
 <section id="content-section">
@@ -14,7 +14,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Панлевкопения</h1>
+                    <h1>Панлевкопения при котките</h1>
                     <h2>Какво е панлевкопения и какво я причинява?</h2>
                     <p>Панлевкопенията е заболяване по котките, което се причинява от вирус, нар. Feline Panleukopenia
                         Virus (FPV). Вирусът атакува червата и костния мозък. Вирусът е изключително устойчив и може да
