--- a/src/diseases/infectious/rabies.html
+++ b/src/diseases/infectious/rabies.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Бяс"></include>
+<include what="@@layout/header.html" var:title="Бяс при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Бяс</h1>
+                    <h1>Бяс при кучетата и котките</h1>
 
                     <h2>Какво е бяс и какво я причинява?</h2>
                     <p>Бесът е заболяване не само по кучетата и котките, но <strong>по всички бозайници</strong>
