--- a/src/diseases/musculoskeletal/patellar-luxation.html
+++ b/src/diseases/musculoskeletal/patellar-luxation.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Гана"></include>
+<include what="@@layout/header.html" var:title="Луксация на колянното капаче при кучетата"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Луксация на колянното капаче</h1>
+                    <h1>Луксация на колянното капаче при кучетата</h1>
 
                     <h2>Какво е луксация на колянното капаче и какво го причинява?</h2>
                     <p>Луксацията на колянното капаче (ЛКК) е често срещано състояние при кучета, при което <strong>колянното капаче</strong> (пателата) <strong>излиза от нормалното си положение</strong> в ямката на бедрената кост. Това изместване се случва към <strong>вътрешната</strong> (медиална) <strong>част</strong> или към <strong>външната (латерална) част </strong><strong>на крака</strong>. Луксацията може да бъде от лека до тежка и може да засегне едното или двете колена.</p>
