--- a/src/diseases/musculoskeletal/rickets.html
+++ b/src/diseases/musculoskeletal/rickets.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Гана"></include>
+<include what="@@layout/header.html" var:title="Рахит при кучетата"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,9 +15,8 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Луксация на колянното капаче</h1>
+                    <h1>Рахит при кучетата</h1>
 
-                    
                     <h2>Какво е рахит и какво го причинява?</h2>
                     <p>Рахитът е заболяване при подрастващите кучета, и е вследствие от липсата на <strong>калций, фосфор или витамин </strong><strong>Д</strong> или небалансираното съотношение между тези минерали. Тези хранителни вещества са от съществено значение за <strong>правилното</strong> <strong>развитие на костите</strong>. При възрастните кучета може да се развие подобно заболяване, нар. <strong>остеомалация</strong> (размекване на костите).</p>
                     
