--- a/src/diseases/neoplasms/lymphoma.html
+++ b/src/diseases/neoplasms/lymphoma.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Лимфома"></include>
+<include what="@@layout/header.html" var:title="Лимфома при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Лимфома</h1>
+                    <h1>Лимфома при кучетата и котките</h1>
                     <h2>Какво е лимфома и какво я причинява?</h2>
                     <p>Лимфомата (известна още като лимфосарком) е един от най-често срещаните ракови заболявания при
                         кучета и котки. Лимфомата се развива от <strong>клетките на имунната система</strong>
