--- a/src/diseases/nervous/epilepsy.html
+++ b/src/diseases/nervous/epilepsy.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Лимфома"></include>
+<include what="@@layout/header.html" var:title="Епилепсия при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Епилепсия</h1>
+                    <h1>Епилепсия при кучетата и котките</h1>
                     
                     <h2>Какво е епилепсия и какво я причинява?</h2>
                     <p>Епилепсията е неврологично заболяване при кучетата и котките, което причинява <strong>повтарящи се гърчове</strong> поради необичайна електрическа активност в мозъка.</p>
