--- a/src/diseases/nervous/hydrocephaly.html
+++ b/src/diseases/nervous/hydrocephaly.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Лимфома"></include>
+<include what="@@layout/header.html" var:title="Хидроцефалия при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Хидроцефалия</h1>
+                    <h1>Хидроцефалия при кучетата и котките</h1>
                     
                     <h2>Какво е хидроцефалия и какво я причинява?</h2>
                     <p>Хидроцефалията е състояние, при което прекомерно количество <strong>мозъчна течност</strong> (цереброспинална течност &ndash; <em>CSF</em>) <strong>се натрупва в мозъка</strong>, което води до <strong>повишено налягане</strong>. Това налягане може да причини увреждане на мозъка и неврологични симптоми. Хидроцефалията може да бъде <strong>вродена</strong> (присъстваща при раждането) поради генетични фактори или <strong>придобита</strong> в по-късен етап от живота в резултат на инфекции, тумори, травми или други медицински състояния.</p>
