--- a/src/diseases/parasitic/heartworm.html
+++ b/src/diseases/parasitic/heartworm.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Дирофилариоза"></include>
+<include what="@@layout/header.html" var:title="Дирофилариоза при кучетата"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Дирофилариоза</h1>
+                    <h1>Дирофилариоза при кучетата</h1>
                     <h2>Какво е дирофилазиоза и какво я причинява?</h2>
                     <p>Дирофилариозата (или още сърдечни червеи) е заболяване при <strong>кучетата</strong> (много рядко
                         при котките), което се причинява от паразити (<em>Dirofilaria immitis</em>), които
