--- a/src/diseases/parasitic/tapeworms.html
+++ b/src/diseases/parasitic/tapeworms.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Цестодоза"></include>
+<include what="@@layout/header.html" var:title="Цестодоза при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Цестодоза</h1>
+                    <h1>Цестодоза при кучетата и котките</h1>
 
                     <h2>Какво представляват Цестодите?</h2>
                     <p><strong>Цестодите</strong> (макар и неправилно, разговорно се нар. <strong>глисти</strong>) са
