--- a/src/diseases/parasitic/ticks.html
+++ b/src/diseases/parasitic/ticks.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Кърлежи"></include>
+<include what="@@layout/header.html" var:title="Наличие на кърлежи при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 <section id="content-section">
@@ -14,7 +14,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Кърлежи</h1>
+                    <h1>Наличие на кърлежи при кучетата и котките</h1>
                     <p>Кърлежите са паразити, които могат да причинят сериозни здравословни проблеми на Вашите любимци.
                         Те не само предизвикват дискомфорт, но също така пренасят опасни заболявания. В тази статия ще
                         научите <strong>всичко,</strong> <strong>което трябва да знаете</strong> за тях, за да защитите
