--- a/src/diseases/circulatory/dcm.html
+++ b/src/diseases/circulatory/dcm.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Дилатативна кардиомиопатия (ДКМ) при кучетата"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Дилатативна кардиомиопатия (ДКМ)</h1>
+                    <h1>Дилатативна кардиомиопатия (ДКМ) при кучетата</h1>
                     
                     
                     <h2>Какво е Дилатативна кардиомиопатия (ДКМ) и какво я причинява?</h2>
