--- a/src/diseases/circulatory/mmvd.html
+++ b/src/diseases/circulatory/mmvd.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Миксоматозно заболяване на митралната клапа (МЗМК) при кучетата"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Миксоматозно заболяване на митралната клапа (МЗМК)</h1>
+                    <h1>Миксоматозно заболяване на митралната клапа (МЗМК) при кучетата</h1>
                     
                     
                     <h2>Какво е миксоматозно заболяване на митралната клапа (миксоматозно заболяване на митралната клапа (МЗМК)) и какво го причинява?</h2>
