--- a/src/diseases/circulatory/pda.html
+++ b/src/diseases/circulatory/pda.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Отворен дуктус артериозус (ОДА) при кучетата"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Отворен дуктус артериозус (ОДА)</h1>
+                    <h1>Отворен дуктус артериозус (ОДА) при кучетата</h1>
                     
                     
                     <h2>Какво е отворен дуктус артериозус и какво го причинява?</h2>
