--- a/src/diseases/digestive/non-infectious-gastroenteritis-and-colitis.html
+++ b/src/diseases/digestive/non-infectious-gastroenteritis-and-colitis.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Неинфекциозен гастроентерит и колит при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Неинфекциозен гастроентерит и колит</h1>
+                    <h1>Неинфекциозен гастроентерит и колит при кучетата и котките</h1>
                     
                     <h2>Какво е неинфекциозен гастроентерит и колит и какво го причинява?</h2>
                     <p>Неинфекциозният гастроентерит и колит представляват възпаление на стомаха, червата или дебелото черво, което не е причинено от инфекция. Това състояние може да бъде предизвикано от различни фактори, включително:</p>
