--- a/src/diseases/genitourinary/benign-prostatic-hyperplasia.html
+++ b/src/diseases/genitourinary/benign-prostatic-hyperplasia.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Доброкачествена хиперплазия на простатата (ДХП) при кучетата"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Доброкачествена хиперплазия на простатата (ДХП)</h1>
+                    <h1>Доброкачествена хиперплазия на простатата (ДХП) при кучетата</h1>
                     
                     <h2>Какво е доброкачествена хиперплазия на простатата (ДХП) и какво я причинява?</h2>
                     <p>Доброкачествената хиперплазия на простатата (ДХП) е често срещано състояние при по-<strong>възрастни мъжки кучета</strong>, при което простатната жлеза се уголемява поради <strong>хормонални промени</strong>. Това е доброкачествено (неканцерогенно) увеличение на простатата, основно причинено от дисбаланс на тестостерон и други хормони с напредването на възрастта. За разлика от инфекции или тумори, ДХП <strong>не се причинява от бактерии или ракови образувания</strong>, а от естествени процеси на стареене и хормонални промени.</p>
