--- a/src/diseases/genitourinary/flutd.html
+++ b/src/diseases/genitourinary/flutd.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Заболяване на долните уринарни пътища (ЗДУП) при котката"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Заболяване на долните уринарни пътища при котката (ЗДУП)</h1>
+                    <h1>Заболяване на долните уринарни пътища (ЗДУП) при котката</h1>
                     
                     <h2>Какво е ЗДУП и какво го причинява? </h2>
                     <p><strong>Заболяване на долните уринарни пътища при котката</strong> (ЗДУП, англ.: Feline lower urinary tract disease, ЗДУП) е термин, който <strong>обхваща различни заболявания</strong> <strong>на долните пикочни пътища </strong>при котките, включително:</p>
