--- a/src/diseases/genitourinary/mammary-hyperplasia.html
+++ b/src/diseases/genitourinary/mammary-hyperplasia.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Хиперплазия на млечните жлези при котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Хиперплазия на млечните жлези</h1>
+                    <h1>Хиперплазия на млечните жлези при котките</h1>
                     
                     <h2>Какво е хиперплазия на млечните жлези и какво я причинява?</h2>
                     <p>Хиперплазията на млечните жлези, известна още като фиброаденоматозна хиперплазия на млечните жлези, е доброкачествено (нераково) <strong>уголемяване на една или повече млечни жлези</strong> при <strong>котките</strong>. Това състояние е свързано с хормоните и най-често се среща при млади, некастрирани женски котки.</p>
