--- a/src/diseases/genitourinary/urinary-incontinence.html
+++ b/src/diseases/genitourinary/urinary-incontinence.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Уринарна инконтиненция при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--cats">
-                    <h1>Уринарна инконтиненция</h1>
+                    <h1>Уринарна инконтиненция при кучетата и котките</h1>
                     
                     <h2>Какво е уринарна инконтиненция и какво я причинява?</h2>
                     <p>Уринарната инконтиненция е неволно изпускане на урина. Това означава, че домашният Ви любимец не може напълно да контролира пикочния си мехур, което води до инциденти вкъщи. Причините могат да бъдат различни, включително:</p>
