--- a/src/diseases/infectious/canine-distemper.html
+++ b/src/diseases/infectious/canine-distemper.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Гана"></include>
+<include what="@@layout/header.html" var:title="Гана при кучетата"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Гана</h1>
+                    <h1>Гана при кучетата</h1>
 
                     <h2>Какво е гана и какво я причинява?</h2>
                     <p>Ганата е заболяване при кучетата и други животни (порове, еноти, мечки, панди и хиени), което се
