--- a/src/diseases/neoplasms/mammary-gland-tumor.html
+++ b/src/diseases/neoplasms/mammary-gland-tumor.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Тумор на млечната жлеза"></include>
+<include what="@@layout/header.html" var:title="Тумор на млечната жлеза при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 <section id="content-section">
@@ -14,7 +14,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Тумор на млечната жлеза</h1>
+                    <h1>Тумор на млечната жлеза при кучетата и котките</h1>
                     <h2>Какво е тумор на млечната жлеза и какво я причинява?</h2>
                     <p>Туморът на млечната жлеза представлява образувание при кучета и котки, което на допир се усеща
                         като малка твърда буца. Водеща причина за образуването му са хормоналните проблеми при
