--- a/src/diseases/parasitic/fleas.html
+++ b/src/diseases/parasitic/fleas.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Бълхи"></include>
+<include what="@@layout/header.html" var:title="Наличие на бълхи при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,7 +15,7 @@
                 
                 <div id="articleContent">
                     <div id="article-content--dogs">
-                        <h1>Бълхи</h1>
+                        <h1>Наличие на бълхи при кучетата и котките</h1>
                         <p>Бълхите са едни от <strong>най-честите паразити</strong>, които засягат домашните любимци. Тези малки насекоми могат да причинят не само дискомфорт, но и сериозни здравословни проблеми. Тази статия съдържа <strong>всичко, което трябва да знаете</strong> за тях, за да защитите Вашия любимец.</p>
 
                         <h2>Какво представляват бълхите?</h2>
@@ -89,19 +89,6 @@
                         <p>С правилната грижа и превенция, можете да предпазите Вашия любимец от дискомфорта и здравословните проблеми, причинени от бълхи. Поддържането на редовни обезпаразитяващи мерки, обяснени от Вашия ветеринар, ще гарантира щастлив и здрав живот за Вашия четириног приятел!</p>
                         
                         <br>
-                        <div class="other-article">
-                            <a href="./ticks.html">
-                                <div class="other-article-prev">
-                                    &laquo; Предходна статия:
-                                </div>
-                            </a>
-
-                            <a href="./lymphoma.html">
-                                <div class="other-article-next">
-                                    Следваща статия &raquo;
-                                </div>
-                            </a>
-                        </div>
 
                     </div>
                 </div>
