--- a/src/diseases/respiratory/brachycephalic-syndrome.html
+++ b/src/diseases/respiratory/brachycephalic-syndrome.html
@@ -1,5 +1,5 @@
 <!-- HEADER -->
-<include what="@@layout/header.html" var:title="Ерлихиоза"></include>
+<include what="@@layout/header.html" var:title="Брахицефален синдром (БЦС) при кучетата и котките"></include>
 <include what="@@layout/menu.html"></include>
 
 
@@ -15,8 +15,7 @@
 
             <div id="articleContent">
                 <div id="article-content--dogs">
-                    <h1>Брахицефален синдром (БЦС)</h1>
-                    
+                    <h1>Брахицефален синдром (БЦС) при кучетата и котките</h1>
                     
                     <h2>Какво представлява брахицефалният синдром на дихателните пътища (БЦС)?</h2>
                     <p>Брахицефалният синдром на дихателните пътища (БЦС) е състояние, което засяга породи кучета и котки <strong>с плоски лица</strong> (<strong>брахицефални</strong>). Тези породи имат сплескани носове, което може да доведе до затруднено дишане. Това се случва, защото дихателните им пътища са <strong>прекалено малки или тесни</strong>, което затруднява нормалното им дишане.</p>
